--- a/product-service/docker-compose.yaml
+++ b/product-service/docker-compose.yaml
@@ -17,5 +17,18 @@ services:
       - "5432:5432"
     volumes:
       - data:/var/lib/postgresql/data
+  server:
+    container_name: api
+    image: golang:latest
+    working_dir: /app
+    volumes:
+      - ./api:/app
+    command: go run -mod=vendor cmd/entrypoint/main.go cmd/entrypoint/router.go
+    ports:
+      - "3001:3001"
+    depends_on:
+      - database
+    environment:
+      DB_URL: postgres://postgres:postgres@database:5432/prod-svc-pg?sslmode=disable
 volumes:
   data:
