handle category module
+ Create migration files
+ Apply DB first to generate db model
+ Update Makefile

--- a/product-service/Makefile
+++ b/product-service/Makefile
@@ -4,11 +4,11 @@
 DOCKER_COMPOSE_FILE ?= docker-compose.yaml
 DATABASE_CONTAINER ?= database
 
-## up: starts all related containers to run the service
-up:	api-up
+## run: starts containers to run api server
+run: pg-create api-create
 
-## api-setup: starts all backend supported containers
-api-up: pg-create api-create
+## api-setup: executes pre-defined steps to setup api server
+api-setup: pg-create pg-migrate api-gen-models
 
 ## pg-create: starts postgres container
 pg-create:
@@ -16,11 +16,31 @@ pg-create:
 	docker-compose -p="product-service" up -d ${DATABASE_CONTAINER}
 	@echo Database container started!
 
+## new-migration-file: creates a DB migration files. Ex: make new-migration-file name=init
+new-migration-file:
+	docker-compose -f ${DOCKER_COMPOSE_FILE} --profile tools run --rm migrate create -ext sql -dir /migrations $(name)
+
+## pg-migrate: executes latest migration files
+pg-migrate:
+	@echo Running migration
+	docker-compose --profile tools run --rm migrate up
+	@echo Migration done!
+
+## pg-drop: reset db to blank
+pg-drop:
+	docker compose --profile tools run --rm migrate drop
+
 ## api-create: starts api server
 api-create:
 	@echo Starting Api container in background
 	docker compose -p="product-service" up ${API_CONTAINER}
 	@echo Api container started!
+
+## api-gen-models: executes CLI command to generator new database models
+api-gen-models:
+	@echo Starting generate db model...
+	cd api && sh -c 'sqlboiler psql'
+	@echo Done!
 
 ## down: stop and remove all docker containers
 down:
